[workspace]
resolver = "2"
members = ["src-cli", "src-lib", "src-reapack", "src-tauri"]

[workspace.dependencies]
reaboot-lib = { path = "src-lib" }
reaboot-reapack = { path = "src-reapack" }
tauri = "1"
serde = "1"
serde_json = "1"
tokio = "1"
ts-rs = "8.0.0"
reqwest = "0.11.26"
reqwest-middleware = "0.2.5"
reqwest-retry = "0.4.0"
anyhow = "1.0.81"
futures = "0.3.30"
tempdir = "0.3.7"
serde-xml-rs = "0.6.0"
time = "0.3.34"
thiserror = "1.0.58"
regex = "1.10.3"
tinyvec = "1.6.0"
ormlite = "0.18.0"
sqlx = "0.7.4"
dirs = "5.0.1"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
octocrab = "0.35.0"
tracing = "0.1.40"
atomic = "0.6.0"
bytemuck = "1.15.0"
url = "2.5.0"
num_enum = "0.7.2"
enumset = "1.1.3"
clap = "4.3.11"
indicatif = "0.17.8"
comfy-table = "7.1.0"
serde_plain = "1.0.2"
strum = "0.26.2"
console = "0.15.8"
dmg = "0.1.2"
dmgwiz = "0.2.4"
fs_extra = "1.3.0"
ref-cast = "1.0.22"
rust-ini = "0.21.0"
camino = "1.1.6"
indexmap = "2.2.6"
tracing-subscriber = "0.3.18"