[workspace]
resolver = "2"
members = ["cli", "core", "gui/src-tauri", "reapack"]

[workspace.package]
version = "0.2.0"
description = "ReaBoot"
edition = "2021"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]

[workspace.dependencies]
reaboot-core = { path = "core" }
reaboot-reapack = { path = "reapack" }
tauri = "1"
serde = "1"
serde_json = "1"
tokio = "1"
ts-rs = "8.0.0"
# We can upgrade this as soon as reqwest-middleware is updated
reqwest = "0.11.26"
reqwest-middleware = "0.2.5"
reqwest-retry = "0.4.0"
anyhow = "1.0.81"
futures = "0.3.30"
tempdir = "0.3.7"
serde-xml-rs = "0.6.0"
time = "0.3.34"
thiserror = "1.0.58"
regex = "1.10.3"
tinyvec = "1.6.0"
ormlite = "0.18.0"
sqlx = "0.7.4"
dirs = "5.0.1"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tracing = "0.1.40"
atomic = "0.6.0"
bytemuck = "1.15.0"
url = "2.5.0"
num_enum = "0.7.2"
enumset = "1.1.3"
clap = "4.3.11"
indicatif = "0.17.8"
serde_plain = "1.0.2"
strum = "0.26.2"
console = "0.15.8"
dmg = "0.1.2"
dmgwiz = "0.2.4"
ref-cast = "1.0.22"
rust-ini = "0.21.0"
camino = "1.1.6"
indexmap = "2.2.6"
tracing-subscriber = "0.3.18"
dialoguer = "0.11.0"
multihash = "0.19.1"
multihash-codetable = "0.1.2"
hex = "0.4.3"
sha2 = "0.10.8"
termimad = "0.29.1"
markdown = "1.0.0-alpha.16"
plist = "1"
schemars = "0.8.16"
dunce = "1.0.4"

[profile.release]
# Those are the settings recommended on https://tauri.app/v1/guides/building/app-size/.
# At least on macOS, they have quite a high impact on binary size.
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols