[package]
name = "reaboot-cli"
description = "ReaBoot CLI - A command-line interface for ReaBoot"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reaboot-core.workspace = true
# For building a command-line interface
clap = { workspace = true, features = ["derive"] }
# Async runtime
tokio.workspace = true
# For convenient error handling
anyhow.workspace = true
# For progress bars
indicatif.workspace = true
# For confirming EULAs
dialoguer.workspace = true
# For things like clearing the screen
console.workspace = true
# For parsing URLs
url.workspace = true
# For emitting log messages
tracing.workspace = true
# For printing log messages
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# For printing a nice report
termimad.workspace = true
# For getting a correctly removed temporary REAPER download directory
tempdir.workspace = true

[[bin]]
name = "reaboot"
path = "src/main.rs"