[package]
name = "reaboot-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reaboot-reapack = { workspace = true }
ts-rs = { workspace = true, features = ["url-impl"] }
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["stream", "socks"] }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
octocrab = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
atomic = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
url = { workspace = true }
enumset = { workspace = true }