[package]
name = "reaboot-reapack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde-xml-rs = { workspace = true }
time = { workspace = true, features = ["serde", "parsing"] }
thiserror = { workspace = true }
regex = { workspace = true }
tinyvec = { workspace = true, features = ["alloc", "rustc_1_57"] }