[package]
name = "reaboot-reapack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde-xml-rs = { workspace = true }
time = { workspace = true, features = ["serde", "parsing"] }
thiserror = { workspace = true }
regex = { workspace = true }
tinyvec = { workspace = true, features = ["alloc", "rustc_1_57"] }
ormlite = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
ts-rs = { workspace = true }
url = { workspace = true, features = ["serde"] }
num_enum = { workspace = true }
enumset = { workspace = true }