[package]
name = "reaboot"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { workspace = true, features = ["shell-open", "dialog-open", "tracing"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reaboot-lib = { workspace = true }
tokio = { workspace = true, features = ["time"] }
anyhow = { workspace = true }
tempdir = { workspace = true }
tauri-plugin-log = { workspace = true }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
