[package]
name = "reaboot-gui"
description = "ReaBoot GUI - A graphical user interface for ReaBoot"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
reaboot-core.workspace = true
reaboot-reapack.workspace = true
# GUI framework
tauri = { workspace = true, features = ["shell-open", "dialog-open", "process-exit", "clipboard-read-text"] }
# For (de)serializing commands and events
serde = { workspace = true, features = ["derive"] }
# For (de)serializing commands and events
serde_json.workspace = true
# Async runtime
tokio = { workspace = true, features = ["time"] }
# For easier error handling
anyhow.workspace = true
# For logging in frontend
tauri-plugin-log.workspace = true
# For logging in backend
tracing.workspace = true
# For generating TypeScript types
ts-rs.workspace = true
# For converting the Markdown installation report to HTML
markdown.workspace = true
# For getting a correctly removed temporary REAPER download directory
tempdir.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# For reading the output of "hdiutil info -plist" on macOS (for recipe ID detection)
plist.workspace = true
# For interpreting paths in the "hdiutil info -plist" output
camino = { workspace = true, features = ["serde1"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
