[package]
name = "reaboot-gui"
description = "ReaBoot - a convenient all-in-one online installer for REAPER, ReaPack and arbitrary packages."
# TODO-high Use workspace value again (was changed for Tauri migration)
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reaboot-core.workspace = true
reaboot-reapack.workspace = true
# GUI framework
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-process.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-clipboard-manager.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-os.workspace = true
# For (de)serializing commands and events
serde = { workspace = true, features = ["derive"] }
# For (de)serializing commands and events
serde_json.workspace = true
# Async runtime
tokio = { workspace = true, features = ["time"] }
# For easier error handling
anyhow.workspace = true
# For logging in frontend
tauri-plugin-log.workspace = true
# For logging in backend
tracing.workspace = true
# For generating TypeScript types
ts-rs.workspace = true
# For converting the Markdown installation report to HTML
markdown.workspace = true
# For getting a correctly removed temporary REAPER download directory
tempdir.workspace = true

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev.package.objc2]
# This fixes running in dev mode on macOS 10.15. See https://github.com/tauri-apps/tauri/issues/11501.
debug-assertions = false